# arborist

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVTRAIL.md  GEMINI.md  README.md
.agent/workflows/: devtrail-adr.md  devtrail-aidec.md  devtrail-ailog.md  devtrail-mcard.md  devtrail-new.md  devtrail-sec.md  devtrail-status.md
.claude/skills/devtrail-adr/: SKILL.md
.claude/skills/devtrail-aidec/: SKILL.md
.claude/skills/devtrail-ailog/: SKILL.md
.claude/skills/devtrail-mcard/: SKILL.md
.claude/skills/devtrail-new/: SKILL.md
.claude/skills/devtrail-sec/: SKILL.md
.claude/skills/devtrail-status/: SKILL.md
.cursor/rules/: devtrail.md
.devtrail/: .checksums.json  QUICK-REFERENCE.md  config.yml  dist-manifest.yml
.devtrail/00-governance/: AGENT-RULES.md  AI-GOVERNANCE-POLICY.md  AI-KPIS.md  AI-LIFECYCLE-TRACKER.md  AI-RISK-CATALOG.md  C4-DIAGRAM-GUIDE.md  DOCUMENTATION-POLICY.md  GIT-BRANCHING-STRATEGY.md  ISO-25010-2023-REFERENCE.md  MANAGEMENT-REVIEW-TEMPLATE.md  OBSERVABILITY-GUIDE.md  PRINCIPLES.md  QUICK-REFERENCE.md
.devtrail/00-governance/exceptions/: .gitkeep
.devtrail/01-requirements/: .gitkeep
.devtrail/02-design/decisions/: .gitkeep
.devtrail/03-implementation/: NIST-AI-600-1-GENAI-RISKS.md  NIST-AI-RMF-GOVERN-GUIDE.md  NIST-AI-RMF-MANAGE-GUIDE.md  NIST-AI-RMF-MAP-GUIDE.md  NIST-AI-RMF-MEASURE-GUIDE.md
.devtrail/04-testing/: .gitkeep  TES-2026-03-28-001-analyze-source-in-memory-analysis.md
.devtrail/05-operations/incidents/: .gitkeep
.devtrail/05-operations/runbooks/: .gitkeep
.devtrail/06-evolution/technical-debt/: .gitkeep
.devtrail/07-ai-audit/agent-logs/: .gitkeep  AILOG-2026-03-28-001-implement-mvp-core-metrics-engine.md  AILOG-2026-03-29-001-speckit-analyze-remediation.md  AILOG-2026-03-29-002-implement-phase7-serialization.md  AILOG-2026-03-30-003-add-kotlin-swift-language-support.md  AILOG-2026-04-13-001-sync-arborium-migration-docs.md
.devtrail/07-ai-audit/decisions/: .gitkeep  AIDEC-2026-03-28-001-tree-sitter-single-parser.md  AIDEC-2026-03-29-001-defer-cyclomatic-per-arm.md  AIDEC-2026-03-29-002-correct-boolean-counting.md
.devtrail/07-ai-audit/ethical-reviews/: .gitkeep
.devtrail/templates/: TEMPLATE-ADR.md  TEMPLATE-AIDEC.md  TEMPLATE-AILOG.md  TEMPLATE-DPIA.md  TEMPLATE-ETH.md  TEMPLATE-INC.md  TEMPLATE-MCARD.md  TEMPLATE-REQ.md  TEMPLATE-SBOM.md  TEMPLATE-SEC.md  TEMPLATE-TDE.md  TEMPLATE-TES.md
.gemini/skills/devtrail-adr/: SKILL.md
.gemini/skills/devtrail-aidec/: SKILL.md
.gemini/skills/devtrail-ailog/: SKILL.md
.gemini/skills/devtrail-mcard/: SKILL.md
.gemini/skills/devtrail-new/: SKILL.md
.gemini/skills/devtrail-sec/: SKILL.md
.gemini/skills/devtrail-status/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: docs-validation.yml
.specify/memory/: constitution.md
examples/: dump_ast.rs
scripts/: devtrail-new.sh  devtrail-status.sh  pre-commit-docs.sh  validate-docs.ps1
specs/001-code-metrics-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-code-metrics-library/checklists/: requirements.md
src/: error.rs  lib.rs  types.rs  walker.rs
src/languages/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  rust.rs  swift.rs  typescript.rs
src/metrics/: cognitive.rs  cyclomatic.rs  loc.rs  mod.rs
tests/: c_analysis.rs  config_tests.rs  cpp_analysis.rs  csharp_analysis.rs  error_cases.rs  feature_flags.rs  go_analysis.rs  java_analysis.rs  javascript_analysis.rs  kotlin_analysis.rs  language_detection.rs  php_analysis.rs  python_analysis.rs  rust_analysis.rs  serialization_tests.rs  source_analysis.rs  swift_analysis.rs  threshold_tests.rs  typescript_analysis.rs
(+93 files in other folders)
