[package]
name = "arborist-metrics"
version = "0.1.2"
edition = "2024"
description = "Multi-language code complexity metrics (cognitive, cyclomatic, SLOC) powered by arborium"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StrangeDaysTech/arborist"
keywords = ["complexity", "cognitive", "cyclomatic", "arborium", "metrics"]
categories = ["development-tools"]
exclude = [
    ".agent/",
    ".claude/",
    ".cursor/",
    ".cursorrules",
    ".devtrail/",
    ".gemini/",
    ".github/",
    ".specify/",
    "scripts/",
    "specs/",
    "temp/",
    "CLAUDE.md",
    "DEVTRAIL.md",
    "GEMINI.md",
]

[lib]
name = "arborist"

[dependencies]
serde = { version = "1", features = ["derive"] }
arborium = { version = "2.16", default-features = false }

[dev-dependencies]
serde_json = "1"

[features]
default = ["rust", "python", "javascript", "typescript", "java", "go"]
all = ["default", "csharp", "cpp", "c", "php", "kotlin", "swift"]

# Individual language features
rust = ["arborium/lang-rust"]
python = ["arborium/lang-python"]
javascript = ["arborium/lang-javascript"]
typescript = ["arborium/lang-typescript", "arborium/lang-tsx"]
java = ["arborium/lang-java"]
csharp = ["arborium/lang-c-sharp"]
cpp = ["arborium/lang-cpp"]
c = ["arborium/lang-c"]
go = ["arborium/lang-go"]
php = ["arborium/lang-php"]
kotlin = ["arborium/lang-kotlin"]
swift = ["arborium/lang-swift"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
